# grpc

./: README.md
MMSKN/: CMakeLists.txt  README.txt  settings.cmake
MMSKN/include/: IOStructs.h  as.h  asbvp.h  fco.h  fpu.h  gk.h  gs.h  img.h  niui.h  niui.ui  skn.h  spobvp.h  structs.h  ui_niui.h
MMSKN/include/grpc/: grpc_helper.h
MMSKN/include/tcp/: tcp.h
MMSKN/source/: as.cpp  asbvp.cpp  fco.cpp  fpu.cpp  gk.cpp  gs.cpp  img.cpp  niui.cpp  skn.cpp  spobvp.cpp
MMSKN/source/grpc/: grpc_helper.cpp
MMSKN/source/tcp/: tcp.cpp
ZAR/: CMakeLists.txt  README.txt  settings.cmake
ZAR/include/: IOStructs.h  img.h
ZAR/include/grpc/: grpc_helper.h
ZAR/include/tcp/: tcp.h
ZAR/source/: Zarnitza.cpp  img.cpp
ZAR/source/grpc/: grpc_helper.cpp
ZAR/source/tcp/: tcp.cpp
